--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="@color/primary_light"
     android:gravity="center_horizontal|right"
     android:orientation="vertical" >
 
@@ -12,31 +13,29 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:paddingTop="30pt"
+        android:paddingBottom="20pt"
         android:text="@string/titre"
-        android:textColor="@color/blanc"
+        android:textColor="@color/text_on_p"
         android:textSize="20pt" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/login_labelLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textColor="@color/blanc" />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_edtLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blanc"
-            android:ems="10" >
+            android:hint="@string/login"
+            android:layout_margin="5pt" >
 
-            <requestFocus />
-        </EditText>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
@@ -44,34 +43,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/login_labelPasse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/passe"
-            android:textColor="@color/blanc" />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_edtPasse"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blanc"
-            android:ems="10"
-            android:inputType="textPassword" />
+            android:hint="@string/passe"
+            app:endIconMode="password_toggle"
+            android:layout_margin="5pt" >
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
+        android:layout_height="wrap_content"
+        android:gravity="center" >
 
         <TextView
             android:id="@+id/login_labelRemember"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/remember"
-            android:textColor="@color/blanc" />
+            android:textColor="@color/text_on_p" />
 
         <CheckBox
             android:id="@+id/login_cbRemember"
@@ -86,7 +85,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="false"
-        android:text="@string/ok" />
+        android:text="@string/ok"
+        android:backgroundTint="@color/secondary"
+        android:textColor="@color/text_on_s"
+        android:layout_gravity="center"
+        android:paddingStart="50pt"
+        android:paddingEnd="50pt" />
 
     <TextView
         android:id="@+id/login_progressText"
