--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -10,6 +10,10 @@
         android:key="urlData"
         android:defaultValue="http://tomnab.fr/chat-api/"
         android:summary="Adresse de la page fournissant les données d'absence. Utiliser 10.0.2.2 pour désigner le serveur sur lequel tourne l'émulateur"/>
+    <SwitchPreference android:key="theme"
+        android:title="Thème sombre"
+        android:defaultValue="false"
+        />
     <PreferenceCategory android:key="identifiants"
         android:title="Identifiants"
         android:summary="Saisie des identifiants utilisateur">
