--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,6 +8,12 @@
     android:gravity="center_horizontal|right"
     android:orientation="vertical" >
 
+    <fragment
+        android:id="@+id/fragment"
+        android:name="com.example.le4tp2.MenuFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
     <TextView
         android:id="@+id/login_titre"
         android:layout_width="match_parent"
