--- a/app/src/main/res/layout/activity_create_compte.xml
+++ b/app/src/main/res/layout/activity_create_compte.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/LinearLayout1"
+    android:id="@+id/create_LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/orange"
@@ -9,35 +9,50 @@
     android:textAlignment="center">
 
     <TextView
-        android:id="@+id/compte_titre"
+        android:id="@+id/create_compte_titre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:text="@string/monCompte"
+        android:text="@string/createCompte"
         android:textColor="@color/blanc"
         android:textSize="20pt" />
-
-    <TextView
-        android:id="@+id/compte_labelLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:text="@string/login"
-        android:textColor="@color/blanc" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
         <TextView
-            android:id="@+id/compte_labelPasse"
+            android:id="@+id/create_compte_labelLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/changePasse"
+            android:gravity="center_horizontal"
+            android:text="@string/login"
             android:textColor="@color/blanc" />
 
         <EditText
-            android:id="@+id/compte_edtPasse"
+            android:id="@+id/create_compte_edtLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="@color/blanc"
+            android:ems="10" />
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <TextView
+            android:id="@+id/create_compte_labelPasse"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/passe"
+            android:textColor="@color/blanc" />
+
+        <EditText
+            android:id="@+id/create_compte_edtPasse"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -47,7 +62,7 @@
     </LinearLayout>
 
     <Button
-        android:id="@+id/compte_btnOK"
+        android:id="@+id/create_compte_btnOK"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="true"
