--- a/app/src/main/res/layout/activity_compte.xml
+++ b/app/src/main/res/layout/activity_compte.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/orange"
+    android:background="?attr/colorPrimaryVariant"
     android:gravity="center_horizontal|right"
     android:orientation="vertical">
 
@@ -13,30 +14,27 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:text="@string/monCompte"
-        android:textColor="@color/blanc"
+        android:textColor="?attr/colorOnPrimary"
         android:textSize="20pt" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/compte_labelLogin"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/login"
-            android:textColor="@color/blanc" />
-
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/compte_edtLogin"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blanc"
-            android:ems="10" >
+            android:hint="@string/login"
+            android:layout_margin="5pt"
+            >
 
-            <requestFocus />
-        </EditText>
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="text" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
@@ -44,20 +42,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/compte_labelPasse"
-            android:layout_width="wrap_content"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/login_edtPasse"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/passe"
-            android:textColor="@color/blanc" />
+            android:hint="@string/passe"
+            app:endIconMode="password_toggle"
+            android:layout_margin="5pt"
+            >
 
-        <EditText
-            android:id="@+id/compte_edtPasse"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:background="@color/blanc"
-            android:ems="10" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
     </LinearLayout>
 
@@ -65,7 +64,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
 
-        <TextView
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/menu"
+            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/couleur"
+            android:layout_margin="5pt">
+
+            <AutoCompleteTextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="none"
+                />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <!--<TextView
             android:id="@+id/compte_avatar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -78,7 +93,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@color/blanc"
-            android:entries="@array/couleurs" />
+            android:entries="@array/couleurs" />-->
 
     </LinearLayout>
 
@@ -87,6 +102,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="true"
-        android:text="@string/ok" />
+        android:text="@string/ok"
+        android:backgroundTint="?attr/colorSecondary"
+        android:textColor="?attr/colorOnSecondary"
+        android:layout_gravity="center"
+        android:layout_marginTop="10pt"
+        android:paddingStart="50pt"
+        android:paddingEnd="50pt"
+        />
 
 </LinearLayout>
