--- a/app/src/main/res/layout/activity_pref.xml
+++ b/app/src/main/res/layout/activity_pref.xml
@@ -10,6 +10,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/colorSurface"
         android:padding="@dimen/inner_frame_layout_padding">
 
         <fragment
