--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -14,7 +14,7 @@
         android:title="@string/action_account"/>
     <item
         android:id="@+id/action_create_account"
-        android:title="@string/createAccount" />
+        android:title="@string/createCompte" />
 
 
 </menu>
